--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 source venv/bin/activate
 export APP_SETTINGS="config.DevelopmentConfig"
+export DATABASE_URL="jdbc:postgresql://localhost:5432/my_db_test"
