--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+marshmallow==2.15.1
+marshmallow-enum==1.4.1
 psycopg2==2.7
 python-dateutil==2.7.2
 python-editor==1.0.3
