--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 alembic==0.9.9
+asn1crypto==0.24.0
+cffi==1.11.5
 click==6.7
+cryptography==1.9
 Flask==0.12.2
 Flask-Migrate==1.8.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.1
 gunicorn==19.4.5
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
@@ -12,6 +16,8 @@ MarkupSafe==1.0
 marshmallow==2.15.1
 marshmallow-enum==1.4.1
 psycopg2==2.7
+pycparser==2.18
+PyJWT==1.6.1
 python-dateutil==2.7.2
 python-editor==1.0.3
 six==1.11.0
